[gd_scene load_steps=9 format=3 uid="uid://degwbj0ixeanu"]

[ext_resource type="Script" path="res://Environment/Hook/hook.gd" id="1_qe3fk"]
[ext_resource type="Texture2D" uid="uid://cqqilrxb1gqaa" path="res://Environment/Hook/hookdown.png" id="3_hldry"]
[ext_resource type="Texture2D" uid="uid://doxg4qbwr80f0" path="res://Environment/Hook/hookback.png" id="4_67xjd"]
[ext_resource type="Texture2D" uid="uid://g80ybp6fviu4" path="res://Environment/Hook/hookAura.png" id="4_ud0rb"]
[ext_resource type="Texture2D" uid="uid://cucdhqbu6p0xi" path="res://Player/lanternlightshape.png" id="5_dwmh3"]
[ext_resource type="Texture2D" uid="uid://bq47jgpqqbfij" path="res://Environment/Hook/hookup.png" id="5_lyn1n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ew1ul"]
radius = 120.0
height = 384.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0qhen"]
radius = 104.0
height = 320.0

[node name="Hook" type="Area2D"]
use_parent_material = true
collision_layer = 0
script = ExtResource("1_qe3fk")
spriteEnabled = ExtResource("5_lyn1n")
spriteDisabled = ExtResource("3_hldry")

[node name="Hookback" type="Sprite2D" parent="."]
texture = ExtResource("4_67xjd")

[node name="HookAreaCollisionShape" type="CollisionShape2D" parent="."]
use_parent_material = true
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ew1ul")

[node name="HookCooldownTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true

[node name="AuraRange" type="Area2D" parent="."]
visible = false
use_parent_material = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AuraRange"]
use_parent_material = true
rotation = -1.57079
shape = SubResource("CapsuleShape2D_0qhen")

[node name="HookSprite" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_lyn1n")

[node name="HookAuraSprite" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
scale = Vector2(0.648479, 0.648479)
texture = ExtResource("4_ud0rb")

[node name="HookLight" type="PointLight2D" parent="."]
color = Color(0.85, 0.838667, 0.68, 1)
energy = 0.2
texture = ExtResource("5_dwmh3")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="HookCooldownTimer" to="." method="_on_hook_cooldown_timer_timeout"]
[connection signal="body_entered" from="AuraRange" to="." method="_on_aura_range_body_entered"]
[connection signal="body_exited" from="AuraRange" to="." method="_on_aura_range_body_exited"]
